@@ -44,6 +44,14 @@
   <!-- Generated by  http://apps-xdgapp.rhcloud.com/oars -->
   <content_rating type="oars-1.1" />
   <releases>
+    <release version="48~alpha" date="2025-01-10" type="development">
+      <description>
+        <ul>
+          <li>Updated translations</li>
+          <li>Migrated to GTK4 (Arnaud B.)</li>
+        </ul>
+      </description>
+    </release>
     <release version="46.0" date="2024-03-16" type="stable">
       <description>
         <ul>
