@@ -1,3 +1,9 @@
+Lights Off 48.alpha
+==================
+
+* Updated translations
+* Migrated to GTK4 (Arnaud B.)
+
 Lights Off 46.0
 ==================
 
